--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "mailchimp-sync.php",
   "projectEditUrl": "https://premium.wpmudev.org/wp-admin/edit.php?post_type=project&page=projects-manage&manage_files=73",
   "description": "",
+  "scripts": {
+    "build": "grunt build"
+  },
   "dependencies": {},
   "devDependencies": {
     "grunt": "~0.4.5",
