--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "git-branch-is": "^0.1.0",
     "grunt": "~0.4.5",
     "grunt-checktextdomain": "^0.1.1",
     "grunt-contrib-clean": "~0.5.0",
